Fix constraints & varifs omit field references coco