@@ -1,151 +1,123 @@
 /* (c) https://github.com/MontiCore/monticore */
 package variablearc._cocos;
 
+import arcbasis.ArcBasisMill;
+import arcbasis._ast.ASTArcElement;
 import arcbasis._ast.ASTComponentHead;
 import arcbasis._ast.ASTComponentType;
-import arcbasis._symboltable.ComponentTypeSymbol;
 import com.google.common.base.Preconditions;
 import de.monticore.expressions.expressionsbasis._ast.ASTExpression;
-import de.monticore.symbols.basicsymbols._symboltable.VariableSymbol;
-import de.monticore.types.check.SymTypeExpression;
+import de.monticore.types.mcbasictypes._ast.ASTConstantsMCBasicTypes;
 import de.se_rwth.commons.logging.Log;
 import montiarc.util.VariableArcError;
 import org.codehaus.commons.nullanalysis.NotNull;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import variablearc.VariableArcAbstractTest;
 import variablearc.VariableArcMill;
 import variablearc._ast.ASTArcConstraintDeclaration;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
-/**
- * Tests for {@link ConstraintsOmitFieldReferences}
- */
 public class ConstraintsOmitFieldReferencesTest extends VariableArcAbstractTest {
 
-  protected ConstraintsOmitFieldReferences coco;
+  protected static String featureName = "someFeature";
 
-  protected static ASTExpression nameExpression(@NotNull String name) {
-    Preconditions.checkNotNull(name);
-    return VariableArcMill.nameExpressionBuilder().setName(name).build();
-  }
-
-  @BeforeEach
-  protected void setCoCo() {
-    coco = new ConstraintsOmitFieldReferences();
-  }
+  protected static String fieldName = "someField";
 
   /**
-   * Provides a component type symbol with specified name and one in and one out
-   * port with specified names. If such a component did not exist in the global
-   * scope yet, it is added to it.
+   * Provides a component type with specified name, one feature, one field, and the provided elements
    */
-  protected ComponentTypeSymbol provideComponentWithField(@NotNull String compName,
-                                                          @NotNull String fieldName) {
+  protected ASTComponentType provideComponentWithFieldAndFeature(@NotNull String compName,
+                                                                 List<ASTArcElement> elements) {
     Preconditions.checkNotNull(compName);
-    Preconditions.checkNotNull(fieldName);
 
-    if (VariableArcMill.globalScope().resolveComponentType(compName)
-      .isPresent() && VariableArcMill.globalScope()
-      .resolveComponentType(compName).get()
-      .getFields(fieldName).isPresent()
-      && VariableArcMill.globalScope().resolveComponentType(compName).get()
-      .getFields().size() == 1) {
-      return VariableArcMill.globalScope().resolveComponentType(compName).get();
-    } else {
-      ComponentTypeSymbol comp = VariableArcMill.componentTypeSymbolBuilder()
-        .setName(compName).setSpannedScope(VariableArcMill.scope()).build();
-
-      VariableSymbol field = VariableArcMill.fieldSymbolBuilder()
-        .setName(fieldName)
-        .setType(Mockito.mock(SymTypeExpression.class)).build();
-      comp.getSpannedScope().add(field);
-
-      VariableArcMill.globalScope().add(comp);
-      VariableArcMill.globalScope().addSubScope(comp.getSpannedScope());
-
-      return comp;
-    }
-  }
-
-  /**
-   * Provides a component type symbol that has does not reference any ports in
-   * the initializer expressions of its fields. If no such component was found
-   * in the global scope yet, the component is added to it.
-   */
-  protected ComponentTypeSymbol provideCompWithoutPortRef() {
-    final String compFieldName = "someField";
-
-    ComponentTypeSymbol comp = provideComponentWithField("WithoutFieldRef", compFieldName);
-
-    ASTArcConstraintDeclaration constraint = VariableArcMill.arcConstraintDeclarationBuilder()
-      .setExpression(nameExpression("someConstraint")).build();
-
-    ASTComponentType compAst = VariableArcMill.componentTypeBuilder()
-      .setName("WithoutFieldRef").setHead(Mockito.mock(ASTComponentHead.class))
+    ASTComponentType comp = VariableArcMill.componentTypeBuilder().setName(compName)
+      .setHead(Mockito.mock(ASTComponentHead.class))
       .setBody(VariableArcMill.componentBodyBuilder()
-        .setArcElementsList(Collections.singletonList(constraint)).build())
+        .addArcElement(
+          VariableArcMill.arcFeatureDeclarationBuilder()
+            .setArcFeaturesList(List.of(VariableArcMill.arcFeatureBuilder()
+              .setName(featureName)
+              .build()))
+            .build())
+        .addArcElement(
+          VariableArcMill.arcFieldDeclarationBuilder()
+            .setMCType(VariableArcMill.mCPrimitiveTypeBuilder()
+              .setPrimitive(ASTConstantsMCBasicTypes.BYTE)
+              .build())
+            .setArcFieldsList(List.of(
+              VariableArcMill.arcFieldBuilder()
+                .setName(fieldName)
+                .setInitial(Mockito.mock(ASTExpression.class))
+                .build()))
+            .build())
+        .addAllArcElements(elements)
+        .build())
       .build();
-    compAst.setSymbol(comp);
-    comp.setAstNode(compAst);
+
+    ArcBasisMill.scopesGenitorDelegator().createFromAST(comp);
+    ArcBasisMill.scopesGenitorP2Delegator().createFromAST(comp);
+    ArcBasisMill.scopesGenitorP3Delegator().createFromAST(comp);
 
     return comp;
   }
 
   /**
-   * Provides a component type symbol that references its own ports in the
-   * expressions of its if statements. If there was no such component before in
-   * the global scope, the component is added to it.
+   * Provides a component type that references a feature in a constraint
    */
-  protected ComponentTypeSymbol provideCompWithOwnFieldRef() {
-    final String compFieldName = "someField";
+  protected ASTComponentType provideCompWithFeatureRef() {
+    ASTArcConstraintDeclaration constraint = VariableArcMill.arcConstraintDeclarationBuilder()
+      .setExpression(VariableArcMill.nameExpressionBuilder()
+        .setName(featureName)
+        .build())
+      .build();
 
+    return provideComponentWithFieldAndFeature("WithoutFieldRef", List.of(constraint));
+  }
+
+  /**
+   * Provides a component type that references a feature and a field in constraints
+   */
+  protected ASTComponentType provideCompWithFeatureAndFieldRef() {
     ASTArcConstraintDeclaration firstConstraint =
       VariableArcMill.arcConstraintDeclarationBuilder()
-        .setExpression(nameExpression(compFieldName)).build();
+        .setExpression(VariableArcMill.nameExpressionBuilder()
+          .setName(fieldName)
+          .build())
+        .build();
 
     ASTArcConstraintDeclaration secondConstraint = VariableArcMill.arcConstraintDeclarationBuilder()
-      .setExpression(nameExpression(compFieldName)).build();
+      .setExpression(VariableArcMill.nameExpressionBuilder()
+        .setName(featureName)
+        .build())
+      .build();
 
-    ComponentTypeSymbol comp = provideComponentWithField("WithOwnFieldRef", compFieldName);
-
-    ASTComponentType compAst = VariableArcMill.componentTypeBuilder()
-      .setName("WithOwnFieldRef").setHead(Mockito.mock(ASTComponentHead.class))
-      .setBody(VariableArcMill.componentBodyBuilder()
-        .setArcElementsList(Arrays.asList(firstConstraint, secondConstraint))
-        .build()).build();
-    compAst.setSymbol(comp);
-    comp.setAstNode(compAst);
-
-    return comp;
+    return provideComponentWithFieldAndFeature("WithFieldRef", List.of(firstConstraint, secondConstraint));
   }
 
   @Test
-  public void shouldNotFindPortReference() {
+  public void shouldNotFindFieldReference() {
     // Given
-    ComponentTypeSymbol comp = provideCompWithoutPortRef();
+    ASTComponentType comp = provideCompWithFeatureRef();
 
     // When
-    this.coco.check(comp.getAstNode());
+    new ConstraintsOmitFieldReferences().check(comp);
 
     // Then
     Assertions.assertEquals(0, Log.getErrorCount());
   }
 
   @Test
-  public void shouldFindOwnPortReference() {
+  public void shouldFindFieldReference() {
     // Given
-    ComponentTypeSymbol comp = provideCompWithOwnFieldRef();
+    ASTComponentType comp = provideCompWithFeatureAndFieldRef();
 
     // When
-    this.coco.check(comp.getAstNode());
+    new ConstraintsOmitFieldReferences().check(comp);
 
     // Then
-    this.checkOnlyExpectedErrorsPresent(VariableArcError.FIELD_REFERENCE_IN_CONSTRAINT_ILLEGAL,
-      VariableArcError.FIELD_REFERENCE_IN_CONSTRAINT_ILLEGAL);
+    this.checkOnlyExpectedErrorsPresent(VariableArcError.FIELD_REFERENCE_IN_CONSTRAINT_ILLEGAL);
   }
 }
